[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bbpylib"
version = "0.1.3"
description = "A personal Python utility library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Brandon Bennett" }
]

[tool.hatch.build.targets.wheel]
packages = ["src/bbpylib"]
